Minor Updates to api & added docs for CategoryAPI
